Add hero method

--- a/src/app/keyup/keyup.component.html
+++ b/src/app/keyup/keyup.component.html
@@ -1,17 +1,27 @@
 <h3> KeyUp </h3>
-<input type="text" (keyup) = "onKeyUp($event)" [(ngModel)]= "keyUpField"/>
-<button (click) = "clearKeyUpText($event)">Clear Me!</button>
+<input type="text" (keyup)="onKeyUp($event)" [(ngModel)]="keyUpField" />
+<button (click)="clearKeyUpText($event)">Clear Me!</button>
 <p> {{enteredText}}</p>
 <hr/>
 
 
 <h3> OnEnter</h3>
-<input type="text" #box (keyup.enter) = "onKeyEnter(box.value)" />
+<input type="text" #box (keyup.enter)="onKeyEnter(box.value)" />
 <p> {{onEnteredText}}</p>
 <hr/>
 
 
 <h3> OnEnter and OnBlur</h3>
-<input type="text" #box2 (keyup.enter) = "onKeyEnter2(box2.value)" 
-  (blur) = "onKeyEnter2(box2.value)" />
+<input type="text" #box2 (keyup.enter)="onKeyEnter2(box2.value)" (blur)="onKeyEnter2(box2.value)" />
 <p> {{onEnteredText2}}</p>
+<hr/>
+
+
+<h3> Adding item to array </h3>
+<input type="text" #newhero [(ngModel)]="heroName" />
+<input type="button" value="Add Hero" (click)="addHero(newhero.value)" (blur)="addHero(newhero.value); newhero.value=''"/>
+<ul>
+  <li *ngFor="let hero of heroes">
+    {{hero}}
+  </li>
+</ul>
